<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amallu</string>
    <string name="action_settings">Settings</string>
    <string name="wifi">WIFI</string>
    <string name="mobilenetwork">MOBILE</string>
    <string name="failedResponse">Error Response code received, Please check the URL.</string>
    <string name="outOfMemoryException">Out of memory exception</string>
    <string name="ioException">Connection timed out. Please retry later!</string>
    <string name="connectionException">Network not available. Please retry later!</string>
    <string name="securityException">security manager check failed.Please check the security settings.</string>
    <string name="exception">Connection timed out. Please retry later!</string>
    <string name="image_content_desc">ImageContentDesc</string>
    <string name="unable_to_login">Unable to login, please try after some time</string>
    <string name="unable_to_change_pwd">Unable to Change Password, please try after some time</string>
    <string name="internal_error">Internal error, please try after some time</string>

    <!-- Login Screen Labels -->
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="not_a_member_yet">Not a member yet? Feel free to</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with">Login in With</string>

    <!-- Forgot Password Screen Labels -->
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="enter_emailid">ENTER EMAIL ID</string>
    <string name="enter_answer">Answer</string>
    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="security_question">Security Question</string>
    <string name="cancel">CANCEL</string>

    <!-- Signup Screen Labels -->
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="re_enter_password">RE ENTER PASSWORD</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobilenumber">MOBILENUMBER</string>

    <!-- Options Labels -->
    <string name="comment">Comment</string>
    <string name="trending">Trending</string>
    <string name="favorites">Favorites</string>
    <string name="watching">Watching</string>
    <string name="friends">Friends</string>
    <string name="activities">Activities</string>
    <string name="live_broadcast">Live Broadcast</string>
    
    <string name="categories">Categories</string>
    <string name="channels">Channels</string>
    <string name="languages">Languages</string>
    
    <string name="current_passsword">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Re-type new Password</string>
    <string name="change">CHANGE</string>
    <string name="curr_pwd_error_msg">Please enter current Password</string>
    <string name="new_pwd_error_msg">Please enter new Password</string>
    <string name="re_type_new_pwd_error_msg">Please re enter new Password</string>
    
    <!-- Error Messages -->
    <string name="uname_error_msg">Please enter Username</string>
    <string name="pwd_error_msg">Please enter Password</string>
    <string name="firstname_error_msg">Please enter Firstname</string>
    <string name="lastname_error_msg">Please enter Lastname</string>
    <string name="re_enter_pwd_error_msg">Please re enter Password</string>
    <string name="dob_error_msg">Please select Date of birth</string>
    <string name="gender_error_msg">Please select Gender</string>
    <string name="mobno_error_msg">Please enter Mobilenumber</string>
    <string name="emailid_error_msg">Please enter Email ID</string>
    <string name="answer_error_msg">Please enter Answer</string>
    <string name="emailid_prop_fmt_error_msg">Please enter Emailid in proper format</string>
    <string name="pwd_conf_pwd_error_msg">Change Password and Confirm Password should be same</string>
    <string name="title_activity_categories_screen">CategoriesScreen</string>
    <string name="date_selection_error">Selected Date should not be less than 18 years</string>
    <string name="mobno_digit_error_msg">Please enter 10 digit Mobilenumber</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    
    <string name="comments_list_unavailable">Comments list unavailable</string>
    <string name="watching_list_unavailable">Watching list unavailable</string>
    <string name="unable_to_fetch_trending_channels">Unable to fetch Trending Channels</string>
    <string name="unable_to_fetch_favorite_channels">Unable to fetch Favorite Channels</string>
    <string name="trending_channels_unavailable">Trending Channels unavailable</string>
    <string name="favorite_channels_unavailable">Favorite Channels unavailable</string>
    <string name="friends_list_unavailable">Friends list unavailable</string>
    <string name="activities_list_unavailable">Activities list unavailable</string>
    <string name="unable_to_fetch_friends_list">Unable to fetch Friends list</string>
    <string name="activity_log_unavailable">Activity log unavailable</string>
    <string name="unable_to_fetch_activity_log">Unable to fetch Activity log</string>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Krishna</item>
        <item >Channels</item>
        <item >Categories</item>
        <item >Language</item>
        <item >Friends</item>
        <item >Activities</item>
        <item >About</item>
        <item >Advertise</item>
        <item >Terms</item>
        <item >Privacy Policy</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_channels</item>
        <item>@drawable/ic_categories</item>
        <item>@drawable/ic_language</item>
        <item>@drawable/ic_friends</item>
        <item>@drawable/ic_activities</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_advertise</item>
        <item>@drawable/ic_terms</item>
        <item>@drawable/ic_privacy</item>
    </array>
    
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="share">Share</string>
    <string name="calender">Calender</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_logout">Do you want to Logout?</string>
    
    <string name="loading">Loading..</string>
    
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    
    <string name="change_password_label">Change Password</string>
    <string name="change_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    
	<string name="terms_privacy_policy">Terms &amp; Privacy Policy</string>
	<string name="about_us">About Us</string>
	
	<!-- Reminder Screen Labels -->
	<string name="reminder">Reminder</string>
	<string name="new_reminder">New Reminder</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="select_channel">Select Channel</string>
    <string name="select_timezone">Select Timezone</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="reminder_date_time">Reminder Date &amp; Time</string>
    <string name="share_with">Share with</string>
    
    <string name="reminder_name_error_msg">Please enter Reminder name</string>
    <string name="select_channel_error_msg">Please select Channel</string>
    <string name="select_timezone_error_msg">Please select Timezone</string>
    <string name="reminder_type_error_msg">Please select Reminder Type</string>
    <string name="reminder_date_time_error_msg">Please select Reminder Date &amp; Time</string>
    <string name="share_with_error_msg">Please enter Share with</string>
    <string name="reminders_unavail_error_msg">Reminders unavailable</string>
    
    <!-- Profile Screen Labels -->
	<string name="overview">Overview</string>
	<string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="chatname">Chat Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="addafriend">ADD A FRIEND</string>
    <string name="addcomment">Add Comment</string>
    <string name="likechannel">Like Channel</string>
    <string name="addfriend">Add Friend</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="type_cur_pwd">Type your current password</string>
    <string name="type_new_pwd">Type your new password</string>
    <string name="confirm_new_pwd">Confirm new password</string>
    
    
</resources>


