<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">
    
    <ScrollView 
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    
	 <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    style="@style/content_style">
	    
	    <ImageView
	        android:id="@+id/amallu_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_logo"
	        android:contentDescription="@string/image_content_desc"
	        android:layout_gravity="center_horizontal"
	        style="@style/app_icon_style"/>
	    
	    <TextView
	        android:id="@+id/page_level_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/connectionException"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <EditText 
	        android:id="@+id/curr_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/current_passsword"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        style="@style/edit_text_style"/>
	    
	    <TextView
	        android:id="@+id/curr_pwd_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/curr_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <EditText 
	        android:id="@+id/new_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/new_password"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        style="@style/edit_text_style"/>
	    
	    <TextView
	        android:id="@+id/new_pwd_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <EditText 
	        android:id="@+id/re_enter_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/retype_new_password"
	        android:inputType="text"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        style="@style/edit_text_style"/>
	    
	    <TextView
	        android:id="@+id/re_type_new_pwd_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/re_type_new_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <Button 
		        android:id="@+id/change_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/change"
		        style="@style/small_button_style"/>
	    
	 </LinearLayout>
	 
  </ScrollView>
 
</RelativeLayout>
