<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    
    <HorizontalScrollView 
        android:id="@+id/button_hori_scroll_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="none">
        
      <LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:orientation="horizontal" >

        <Button
            android:id="@+id/comment_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/comment"
            style="@android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/trending_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/trending"
            style="@android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/favorites_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/favorites"
            style="@android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/watching_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/watching"
            style="@android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/friends_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/friends"
            style="@android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/activities_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/image_content_desc"
            android:text="@string/activities"
            style="@android:attr/buttonBarButtonStyle"/>
        
     </LinearLayout>
        
  </HorizontalScrollView>
        
</RelativeLayout>
