<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
	   android:layout_width="fill_parent"
	   android:layout_height="fill_parent"
	   android:background="@color/white">
	   
   <RelativeLayout
       android:id="@+id/change_pwd_header"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:background="@color/white"
	   android:layout_marginTop="0dp"
	   android:layout_marginBottom="0dp"
	   style="@style/content_style">
	   
       <TextView
	        android:id="@+id/change_pwd_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/change_password_label"
	        android:textColor="@color/black"
	        android:textStyle="bold"
	        style="@style/text_size_style"/> 
	        
       <ImageView 
	        android:id="@+id/icon_right_arrow"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_drawer"
	        android:contentDescription="@string/image_content_desc"
	        android:background="@color/white"
	        android:visibility="visible"
	        android:layout_alignParentRight="true"
	        style="@style/icon_small_layout"/>
       
   </RelativeLayout>

   <LinearLayout
       android:id="@+id/change_pwd_details"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:orientation="vertical"
	   android:background="@color/white"
	   android:layout_below="@id/change_pwd_header"
	   style="@style/content_style">
    
      <!--  <TextView
	        android:id="@+id/change_pwd_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/change_password_label"
	        android:visibility="visible"
	        android:textColor="@color/black"
	        android:textStyle="bold"
	        style="@style/text_size_style"/>  -->
    
       <TextView
	        android:id="@+id/page_level_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/connectionException"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
    
       <EditText 
	        android:id="@+id/curr_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/current_passsword"
	        android:textColorHint="@color/hint_text_color"
	        android:maxLength="40"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        style="@style/edit_text_style"/>
    
	    <TextView
	        android:id="@+id/curr_pwd_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/curr_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <EditText 
	        android:id="@+id/change_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/change_password"
	        android:textColorHint="@color/hint_text_color"
	        android:inputType="textPassword"
	        android:maxLength="40"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        style="@style/edit_text_style"/>
    
	    <TextView
	        android:id="@+id/change_pwd_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
	    
	    <EditText 
	        android:id="@+id/conf_pwd_edit_txt_view"
	        android:layout_width="fill_parent"
	        android:hint="@string/confirm_password"
	        android:textColorHint="@color/hint_text_color"
	        android:maxLength="40"
	        android:singleLine="true"
	        android:imeOptions="actionDone"
	        style="@style/edit_text_style"/>
	    
	    <TextView
	        android:id="@+id/conf_pwd_error_txt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/re_type_new_pwd_error_msg"
	        android:visibility="gone"
	        style="@style/error_text_style"/>
    
	    <LinearLayout 
	        android:id="@+id/save_lin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        style="@style/cancel_submit_lin">
	        
	        <Button 
		        android:id="@+id/save_btn"
		        android:layout_width="0dp"
		        android:text="@string/save"
		        style="@style/button_style"
		        android:layout_weight="1"/>
	        
	    </LinearLayout>
   
   </LinearLayout>
   
 </RelativeLayout>
